--- a/styles/font.css
+++ b/styles/font.css
@@ -5,6 +5,14 @@
     src: url('https://fonts.googleapis.com/css?family=Kanit&display=swap');
   }
 
+  @font-face {
+    font-family: "consolas";
+    src: url("../src/assets/font/consolas/consolas.ttf") format("ttf"),
+      /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+      url("../src/assets/font/consolas/consolas.ttf") format("truetype");
+    /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+  }
+
   .body{
     font-family: 'Kanit';
   }
